# esp-idf-sbom

./: .cz.toml  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  check_copyright_config.yaml  excluded_cves.yaml  pyproject.toml  report_schema.json  setup.py
.github/workflows/: create_gh_release.yml  issue_comment.yml  new_issues.yml  new_prs.yml  release_pypi.yml  sync-jira.yml
aggregated_manifests/: v4.3.1.yml  v4.3.2.yml  v4.3.3.yml  v4.3.4.yml  v4.3.5.yml  v4.3.6.yml  v4.3.7.yml  v4.3.yml  v4.4.1.yml  v4.4.2.yml  v4.4.3.yml  v4.4.4.yml  v4.4.5.yml  v4.4.6.yml  v4.4.7.yml  v4.4.8.yml  v4.4.yml  v5.0.1.yml  v5.0.2.yml  v5.0.3.yml  v5.0.4.yml  v5.0.5.yml  v5.0.6.yml  v5.0.7.yml  v5.0.8.yml  v5.0.yml  v5.1.1.yml  v5.1.2.yml  v5.1.3.yml  v5.1.4.yml  v5.1.5.yml  v5.1.6.yml  v5.1.yml  v5.2.1.yml  v5.2.2.yml  v5.2.3.yml  v5.2.4.yml  v5.2.5.yml  v5.2.yml  v5.3.1.yml  (+6 more)
esp_idf_sbom/: __init__.py  __main__.py  idf_ext.py  main.py  sbom.py
esp_idf_sbom/libsbom/: CPE.py  cyclonedx.py  expr.py  git.py  log.py  mft.py  nvd.py  report.py  sbom.py  spdx.py  utils.py
test/: test_sbom.py  validate_excluded_cves.py
